--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@
 /captures
 .externalNativeBuild
 /keystore.properties
+.idea/
+.project
+.settings/
+app/.classpath
+app/.project
+app/.settings/
+.vscode
